--- a/app/views/user/resumes_form/_resumes_form.html.erb
+++ b/app/views/user/resumes_form/_resumes_form.html.erb
@@ -11,7 +11,7 @@
 			<%= render partial: "user/resumes_form/edu_experience_form" %>
 		</div>
 		<!-- 实习经历 -->
-		<div class="my-col col-md-12">
+		<div class="my-col col-md-12" id="my_iternship">
 			<%= render partial: "user/resumes_form/internship_form" %>
 		</div>
 		<!-- 项目经验 -->
