complete admin profession & technology part

--- a/app/views/admin/colleges/edit.html.erb
+++ b/app/views/admin/colleges/edit.html.erb
@@ -6,7 +6,7 @@
     <a href="<%= admin_colleges_path%>">院校列表</a>
   </li>
   <li>
-    <a href="<%= admin_college_path(@college)%>"><%= @college.name %></a>
+    <a href="<%= admin_colleges_path%>"><%= @college.name %></a>
   </li>
   <li class="active">修改</li>
   <hr></hr>
