--- a/app/views/admin/technologies/index.html.erb
+++ b/app/views/admin/technologies/index.html.erb
@@ -23,7 +23,7 @@
   <thead>
     <tr>
       <th class="text-center">编号</th>
-      <th class="text-center">名称</th>
+      <th class="text-center">体系名称</th>
       <th class="text-center">展示图</th>
       <th class="text-center">阶段</th>
       <th class="text-center" colspan="2">操作</th>
