--- a/app/views/admin/profession_stages/index.html.erb
+++ b/app/views/admin/profession_stages/index.html.erb
@@ -2,12 +2,14 @@
   <li>
     <a href="#{admin_root_path}">后台</a>
   </li>
-  <li class="active">职业路径列表</li>
+  <li><%= link_to "职业路径列表", admin_professions_path %></li>
+  <li><%= link_to @profession.name, admin_professions_path %></li>
+  <li class="active">阶段列表</li>
 <%end%>
 
 <%= content_for :toolbar do %>
   <div class="col-xs-12">
-    <%= link_to new_admin_profession_path, class: 'btn btn-success' do %>
+    <%= link_to new_admin_profession_profession_stage_path, class: 'btn btn-success' do %>
       <span class="glyphicon glyphicon-plus-sign"></span> 新增
     <%end%>
     <div class="col-xs-3 pull-right">
@@ -22,15 +24,15 @@
 <table class="table table-hover table-bordered text-center table-condensed">
   <thead>
     <tr>
-      <th class="text-center">编号</th>
-      <th class="text-center">名称</th>
-      <th class="text-center">展示图</th>
-      <th class="text-center">阶段</th>
+      <th class="text-center">阶段编号</th>
+      <th class="text-center">阶段名称</th>
+      <th class="text-center">阶段描述</th>
+      <th class="text-center">阶段课程</th>
       <th class="text-center" colspan="2">操作</th>
     </tr>
   </thead>
   <tbody>
-  <%= render @professions %>
+  <%= render @profession_stages %>
   </tbody>
 </table>
-<%= paginate @professions %>
+<%= paginate @profession_stages %>
