--- a/app/views/admin/technology_stages/new_course.html.erb
+++ b/app/views/admin/technology_stages/new_course.html.erb
@@ -1,15 +1,14 @@
 <%= content_for :nav do%>
 	<li><a href="#{admin_root_path}">后台</a></li>
-	<li><%= link_to "院校列表", admin_colleges_path %></li>
-	<li class="active"><%= @college.name %></li>
-	<li><%= link_to "课程列表", courses_admin_college_path %></li>
+	<li><%= link_to "技术阶段: #{@technology_stage.name}", admin_technology_technology_stages_path %></li>
+	<li><%= link_to "课程列表", courses_admin_technology_technology_stage_path %></li>
 	<li class="active">添加</li>
 <%end%>
 
-<%= form_tag(create_courses_admin_college_path) do |f| %>
+<%= form_tag(create_course_admin_technology_technology_stage_path) do |f| %>
 
 <%= hidden_field_tag :stage_courseable_id, params[:id].to_i %>
-<%= hidden_field_tag :stage_courseable_type, "College" %>
+<%= hidden_field_tag :stage_courseable_type, "TechnologyStage" %>
 <div class="form-group clearfix">
 	<label class="col-sm-2 control-label text-right">选择课程</label>
 	<div class="col-sm-8">
