finish college courses

--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -4,7 +4,7 @@
 .media {
 	padding: 0!important;
 }
-.courses__list {
+.colleges__index {
 	#CollegeList {
 		padding: 0 7.5px;
 		margin-bottom: 25px;
