--- a/app/views/admin/profession_stages/_profession_stage.html.erb
+++ b/app/views/admin/profession_stages/_profession_stage.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= profession_stage.id %></td>
   <td><%= profession_stage.name %></td>
-  <td><%= profession_stage.discribe %></td>
+  <td><%= profession_stage.description %></td>
   <td><%= link_to "课程列表", "#" %></td>
   <td>
     <%= link_to edit_admin_profession_profession_stage_path(params[:profession_id], profession_stage), class: 'btn btn-xs btn-default', title: '编辑' do %>
