--- a/app/views/admin/technology_stages/_technology_stage.erb
+++ b/app/views/admin/technology_stages/_technology_stage.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= technology_stage.id %></td>
   <td><%= technology_stage.name %></td>
-  <td><%= technology_stage.discribe %></td>
+  <td><%= technology_stage.description %></td>
   <td><%= link_to "课程列表", courses_admin_technology_technology_stage_path(params[:technology_id], @technology) %></td>
   <td>
     <%= link_to edit_admin_technology_technology_stage_path(params[:technology_id], technology_stage), class: 'btn btn-xs btn-default', title: '编辑' do %>
