--- a/app/views/courses/_courses_intro.html.erb
+++ b/app/views/courses/_courses_intro.html.erb
@@ -1,7 +1,7 @@
 <div class="sub_head">
   <ol class="breadcrumb">
   	<li><span class="glyphicon glyphicon-home">&nbsp;</span>课程中心</li>
-  	<li><%= params[:category] %></li>
+  	<li><%= link_to "全部课程", courses_path %></li>
   	<li class="active"><%= course.title %></li>
   </ol>
 </div>
