--- a/app/views/share/_category.html.erb
+++ b/app/views/share/_category.html.erb
@@ -10,7 +10,7 @@
 			<% end %>
 		</div>
 		<div class="col-sm-3">
-			<%= link_to list_courses_path, class: "link-lg" do %>
+			<%= link_to colleges_path, class: "link-lg" do %>
 			  <i class="courses-iconfont iconfont">&#xe607;</i><span class="courses-cate">大学课程</span>
 			<% end %>
 		</div>
