--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -1,12 +1,14 @@
 <div class="container">
 	<ol class="courses-bread breadcrumb">
 	<span><i class="iconfont">&#xe60a;</i></span>
-	<li class="active">全部课程</li>
+	<li><%= link_to "大学课程", colleges_path %></li>
+	<li class="active"><%= @college.name %></li>
+	<li class="active">课程列表</li>
 	</ol>
 	<%= render partial: "share/category" %>
 	<div class="row">
 		<div class="title-bar">
-			<h4 class="text-center title">课程中心</h4>
+			<h4 class="text-center title">学校课程</h4>
 			<div class="line"></div>
 		</div>
 		<div id="courseList">
