--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,24 +1,17 @@
-<% @courses.each do |course|%>
-	<div class="col-sm-4">
+<div class="col-sm-4">
+	<%= link_to course do %>	
 		<div class="bordered">
-		  <%= link_to course_path(course.id, category: category) do %>
-				<%= image_tag(course.image.avatar.url(:c_360_200), class: "img-responsive")%>
-				<%#= image_tag(course.try(:teacher).try(:image).avatar.url(:t_98), class: "img-responsive avatar") if course.teacher %>
-				<!-- <span class="pull-right name"><%= course.try(:teacher).try(:name) %></span> -->
-				<div class="col-sm-12 mt-10">
-					<p class="text-muted course-descrip"><%= course.try(:teacher).try(:description) %></p>
-					<p class="text-muted course-title"><%= course.title %></p>
-				</div>
-				<div class="col-sm-12 infos">
-					<i class="icon-tubiao iconfont"></i> <%= course.view_count %>
-					&nbsp;&nbsp;&nbsp;
-					<i class="icon-shizhong iconfont"></i><%= format_time(course.last_update_time) %>
-					<b class="pull-right">免费</b>
-				</div>
-			<% end %>
+			<%= image_tag(course.image.avatar.url(:c_360_200), class: "img-responsive")%>
+			<div class="col-sm-12 mt-10">
+				<p class="text-muted course-descrip"><%= course.title %></p>
+				<p class="text-muted course-title"><%= course.description %></p>
+			</div>
+			<div class="col-sm-12 system-icon">
+				<i class="icon-tubiao iconfont"></i><%= course.view_count %>
+				&nbsp;&nbsp;&nbsp;
+				<i class="icon-shizhong iconfont"></i><%= format_time(course.last_update_time) %>
+				<b class="pull-right">免费</b>
+			</div>
 		</div>
-	</div>
-<% end %>
-<%= link_to "#" do %>
-<div class="show-more col-sm-12 text-center"><span class="">显示更多</span><i class="icon-xiangxiazhankai iconfont"></i></div>
-<% end %>
+	<% end %>
+</div>
