--- a/app/views/share/_category.html.erb
+++ b/app/views/share/_category.html.erb
@@ -15,12 +15,12 @@
 			<% end %>
 		</div>
 		<div class="col-sm-3">
-			<%= link_to system_index_path, class: "link-lg" do %>
+			<%= link_to technologies_path, class: "link-lg" do %>
 			  <i class="courses-iconfont iconfont">&#xe60c;</i><span class="courses-cate">技术体系</span>
 			<% end %>
 		</div>
 		<div class="col-sm-3">
-			<%= link_to career_index_path, class: "link-lg" do %>
+			<%= link_to professions_path, class: "link-lg" do %>
 			  <i class="courses-iconfont iconfont">&#xe608;</i><span class="courses-cate">职业路径</span>
 			<% end %>
 		</div>
