--- a/app/views/admin/professions/_form.html.erb
+++ b/app/views/admin/professions/_form.html.erb
@@ -19,6 +19,12 @@
       <%= f.text_field :name, class: 'form-control' %>
     </div>
   </div>
+  <div class="form-group">
+    <%= f.label :introduce, '体系简介', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.text_area :introduce, class: 'form-control', rows: "6" %>
+    </div>
+  </div>
   <hr></hr>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
