--- a/app/views/admin/technology_stages/_form.html.erb
+++ b/app/views/admin/technology_stages/_form.html.erb
@@ -6,9 +6,9 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :discribe, '描述', class: 'col-sm-2 control-label' %>
+    <%= f.label :description, '描述', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
-      <%= f.text_field :discribe, class: 'form-control' %>
+      <%= f.text_field :description, class: 'form-control' %>
     </div>
   </div>
   <hr></hr>
