--- a/app/views/wechat/applies/_form.html.erb
+++ b/app/views/wechat/applies/_form.html.erb
@@ -19,8 +19,8 @@
 		<%= f.input :situation, collection: Apply::SITUATION.invert, wrapper_html: {class: 'col-xs-6 rpadding'}, selected: Apply::SITUATION.invert["学生"], placeholder: "目前状态" %>
 		<%= f.input :degree, collection: Apply::DEGREE.invert, wrapper_html: {class: 'col-xs-6 lpadding'}, selected: Apply::DEGREE.invert["本科"], placeholder: "教育状况" %>
 	</div>
-	<%= f.button :button, class: "my-btn" do %>
-	<%= content_tag(:div, "提交信息", class: "text-center") %>
+	<%= f.button :button, class: "my-btn", data: { disable_with: '正在提交...' } do %>
+		<%= content_tag(:div, "提交信息", class: "text-center") %>
 	<% end %>
 <% end %><!-- end: 报名表单 -->
 
